--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/meron/Desktop/xelpha/billing_env/bin/python"
+    "python.pythonPath": "../env_env/bin/python"
 }
