--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ chardet==3.0.4
 Django==2.1.5
 django-filter==2.0.0
 djangorestframework==3.9.0
+djangorestframework-jwt==1.11.0
 idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
 Markdown==3.0.1
 mccabe==0.6.1
 pkg-resources==0.0.0
+PyJWT==1.7.1
 pylint==2.2.2
 python-dotenv==0.10.1
 pytz==2018.9
